--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.1",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
     "next": "^14.2.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
